[package]
name = "pkg_compile_time"
version = "0.1.0"
authors = ["zydxhs <johnsmithcry@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
chrono = "0.4.15"
proc-macro2 = "1.0.21"
quote = "1.0.7"
