[package]
name = "pkg_compile_time"
version = "0.1.1"
authors = ["zydxhs <johnsmithcry@163.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
chrono = "*"
proc-macro2 = "1.*"
quote = "1.*"
